--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,12 @@ colorama==0.4.4
 constantly==15.1.0
 cryptography==3.4.7
 cssselect==1.1.0
+cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
+fonttools==4.28.3
 geographiclib==1.52
 geopy==2.2.0
 h2==3.2.0
@@ -38,8 +40,10 @@ jsonschema==4.2.1
 jupyter-client==7.1.0
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
+kiwisolver==1.3.2
 lxml==4.6.3
 MarkupSafe==2.0.1
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
 nbclient==0.5.9
@@ -54,6 +58,7 @@ pandocfilters==1.5.0
 parsel==1.6.0
 parso==0.8.3
 pickleshare==0.7.5
+Pillow==8.4.0
 priority==1.3.0
 prometheus-client==0.12.0
 prompt-toolkit==3.0.23
